--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
    
      <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
 
-     <script src="./templates/js/main.js"></script>
+     <script src="templates/js/main.js"></script>
 </body>
 
 </html>
